css/portfolio_design.css
@font-face {
    font-family: 'Hollywood';
    src: url('fonts/hollywood.ttf') format('truetype'), url('fonts/hollywood.woff') format('woff'), url('fonts/hollywood.woff2') format('woff2');
}

@font-face {
    font-family: 'Glitch';
    src: url('fonts/glitch.ttf') format('truetype'), url('fonts/glitch.woff') format('woff'), url('fonts/glitch.woff2') format('woff2');
}

@font-face {
    font-family: 'Optimus';
    src: url('fonts/Optimus.ttf') format('truetype'), url('fonts/Optimus.woff') format('woff'), url('fonts/Optimus.woff2') format('woff2');
}

body {
    font-size: 24px;
    font-family: 'Optimus', 'Courier New', Courier, monospace;
    margin: 0px;
}

#title {
    text-align: center;
    font-size: 38px;
    font-family: 'Optimus', 'Courier New', Courier, monospace;
}

#top {
    background-image: url('assets/city.jpg');
    background-repeat: no-repeat;
    background-size: cover;
}

#top h1 {
    margin: 0px 0px 0px 0px;
    padding: 250px 0px 75px 0px;
}

.nav-bar {
    text-align: center;
    padding-right: 35px;
    padding-bottom: 650px;
}

.nav-bar li {
    display: inline-flex;
    margin: 10px 20px 10px 20px;
    border: 1px solid;
    padding: 5px 10px 5px 10px;
    transition: 0.3s;
}

.nav-bar li:hover {
    background-color: rgb(0, 0, 0);
    color: white;
}

.nav-bar a {
    color: inherit;
    text-decoration: none;
    transition: 0.3s;
}

::-webkit-scrollbar {
    width: 15px;
}

 ::-webkit-scrollbar-track {
    background: rgb(214, 214, 214);
}

 ::-webkit-scrollbar-thumb {
    background: rgb(177, 177, 177);
}

 ::-webkit-scrollbar-thumb:hover {
    background: #555;
}

